tests/include_suppressed/include_suppressed.exp
Without --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Warning ---------------------------------------------------------------------------------------------------- test.js:8:1

Unused suppression comment.

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 error and 1 warning


With --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:6:2
   6| (123: string); // Suppressed error
       ^^^ [1]

References:
   test.js:6:7
   6| (123: string); // Suppressed error
            ^^^^^^ [2]


Warning ---------------------------------------------------------------------------------------------------- test.js:8:1

Unused suppression comment.

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors and 1 warning


JSON without --include-suppressed
{
  "jsonVersion":"1",
  "errors":[
    {
      "kind":"infer",
      "level":"error",
      "suppressions":[],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "type":"Blame",
              "path":"",
              "line":0,
              "endline":0,
              "start":1,
              "end":0
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[1]",
              "type":"Blame",
              "loc":{
                "source":"test.js",
                "type":"SourceFile",
                "start":{"line":3,"column":2,"offset":11},
                "end":{"line":3,"column":4,"offset":14}
              },
              "path":"test.js",
              "line":3,
              "endline":3,
              "start":2,
              "end":4
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[2]",
              "type":"Blame",
              "loc":{
                "source":"test.js",
                "type":"SourceFile",
                "start":{"line":3,"column":7,"offset":16},
                "end":{"line":3,"column":12,"offset":22}
              },
              "path":"test.js",
              "line":3,
              "endline":3,
              "start":7,
              "end":12
            }
          ]
        }
      ],
      "message":[
        {
          "context":"(123: string); // Normal error",
          "descr":"Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":3,"column":2,"offset":11},
            "end":{"line":3,"column":4,"offset":14}
          },
          "path":"test.js",
          "line":3,
          "endline":3,
          "start":2,
          "end":4
        }
      ],
      "error_codes":["incompatible-cast"]
    },
    {
      "kind":"infer",
      "level":"warning",
      "suppressions":[],
      "message":[
        {
          "context":"// $FlowFixMe - unused suppression comment",
          "descr":"Unused suppression comment.",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":8,"column":1,"offset":92},
            "end":{"line":8,"column":42,"offset":134}
          },
          "path":"test.js",
          "line":8,
          "endline":8,
          "start":1,
          "end":42
        }
      ],
      "error_codes":[]
    }
  ],
  "passed":false
}


JSON with --include-suppressed
{
  "jsonVersion":"1",
  "errors":[
    {
      "kind":"infer",
      "level":"error",
      "suppressions":[],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "type":"Blame",
              "path":"",
              "line":0,
              "endline":0,
              "start":1,
              "end":0
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[1]",
              "type":"Blame",
              "loc":{
                "source":"test.js",
                "type":"SourceFile",
                "start":{"line":3,"column":2,"offset":11},
                "end":{"line":3,"column":4,"offset":14}
              },
              "path":"test.js",
              "line":3,
              "endline":3,
              "start":2,
              "end":4
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Normal error",
              "descr":"[2]",
              "type":"Blame",
              "loc":{
                "source":"test.js",
                "type":"SourceFile",
                "start":{"line":3,"column":7,"offset":16},
                "end":{"line":3,"column":12,"offset":22}
              },
              "path":"test.js",
              "line":3,
              "endline":3,
              "start":7,
              "end":12
            }
          ]
        }
      ],
      "message":[
        {
          "context":"(123: string); // Normal error",
          "descr":"Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":3,"column":2,"offset":11},
            "end":{"line":3,"column":4,"offset":14}
          },
          "path":"test.js",
          "line":3,
          "endline":3,
          "start":2,
          "end":4
        }
      ],
      "error_codes":["incompatible-cast"]
    },
    {
      "kind":"infer",
      "level":"warning",
      "suppressions":[],
      "message":[
        {
          "context":"// $FlowFixMe - unused suppression comment",
          "descr":"Unused suppression comment.",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":8,"column":1,"offset":92},
            "end":{"line":8,"column":42,"offset":134}
          },
          "path":"test.js",
          "line":8,
          "endline":8,
          "start":1,
          "end":42
        }
      ],
      "error_codes":[]
    },
    {
      "kind":"infer",
      "level":"error",
      "suppressions":[
        {
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":5,"column":1,"offset":42},
            "end":{"line":5,"column":13,"offset":55}
          }
        }
      ],
      "extra":[
        {
          "message":[
            {
              "context":null,
              "descr":"References:",
              "type":"Blame",
              "path":"",
              "line":0,
              "endline":0,
              "start":1,
              "end":0
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Suppressed error",
              "descr":"[1]",
              "type":"Blame",
              "loc":{
                "source":"test.js",
                "type":"SourceFile",
                "start":{"line":6,"column":2,"offset":57},
                "end":{"line":6,"column":4,"offset":60}
              },
              "path":"test.js",
              "line":6,
              "endline":6,
              "start":2,
              "end":4
            }
          ]
        },
        {
          "message":[
            {
              "context":"(123: string); // Suppressed error",
              "descr":"[2]",
              "type":"Blame",
              "loc":{
                "source":"test.js",
                "type":"SourceFile",
                "start":{"line":6,"column":7,"offset":62},
                "end":{"line":6,"column":12,"offset":68}
              },
              "path":"test.js",
              "line":6,
              "endline":6,
              "start":7,
              "end":12
            }
          ]
        }
      ],
      "message":[
        {
          "context":"(123: string); // Suppressed error",
          "descr":"Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]",
          "type":"Blame",
          "loc":{
            "source":"test.js",
            "type":"SourceFile",
            "start":{"line":6,"column":2,"offset":57},
            "end":{"line":6,"column":4,"offset":60}
          },
          "path":"test.js",
          "line":6,
          "endline":6,
          "start":2,
          "end":4
        }
      ],
      "error_codes":["incompatible-cast"]
    }
  ],
  "passed":false
}


Server without --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Warning ---------------------------------------------------------------------------------------------------- test.js:8:1

Unused suppression comment.

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 error and 1 warning


Server with --include-suppressed
Error ------------------------------------------------------------------------------------------------------ test.js:3:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:3:2
   3| (123: string); // Normal error
       ^^^ [1]

References:
   test.js:3:7
   3| (123: string); // Normal error
            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:2

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test.js:6:2
   6| (123: string); // Suppressed error
       ^^^ [1]

References:
   test.js:6:7
   6| (123: string); // Suppressed error
            ^^^^^^ [2]


Warning ---------------------------------------------------------------------------------------------------- test.js:8:1

Unused suppression comment.

   8| // $FlowFixMe - unused suppression comment
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors and 1 warning

